--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 
-<!-- slide -->
+<!-- slide >
 <div class="container">
     <div class="row">
         <div class="modal fade" id="firstNotice">
@@ -9,14 +9,14 @@
                     <div class="modal-header fechar">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
                     </div> 					
-                    <!-- / modal-header -->
+                    <!-- / modal-header >
                     <div class="modal-body ">						
                         <div id="carouselExampleIndicators" class="carousel slide sobre" data-ride="carousel">
                             <!-- <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleIndicators" id="" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                            </ol> -->
+                            </ol> >
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="{{ imgPath }}assets/img/map/slider7.jpg" alt="Primeiro slide">
@@ -34,39 +34,33 @@
                             </a>
                         </div>				
                     </div>                    
-                    <!-- / modal-body -->
+                    <!-- / modal-body >
                     <div class="modal-footer">
                         <div class="checkbox pull-right">
                             <label>
                                 <input id="notice" class="modal-check" name="modal-check" type="checkbox"><span class="textoc">{{ 'tools.notice' | translate }}.</span>
                             </label>
                         </div>
-                        <!--/ checkbox -->
+                        <!--/ checkbox >
                     </div>
-                    <!--/ modal-footer -->
+                    <!--/ modal-footer >
                 </div>
-                <!-- / modal-content -->
+                <!-- / modal-content >
             </div>
-            <!--/ modal-dialog -->
+            <!--/ modal-dialog >
         </div>
-        <!-- / modal -->
+        <!-- / modal >
     </div>
-    <!-- / row -->
+    <!-- / row >
 </div>
 <!-- / container -->
 
-<!-- Carousel Slider --> 
+<!-- Carousel Slider > 
 <script>
     $(document).ready(function() {
         $('#carouselExampleIndicators').modal('show');
-        $('.carousel').carousel({
+        $('.carousel'). http://172.18.0.1:13222/api/v1/visioncarousel({
             interval: 2000
         })
     });
-</script>
-
-<!--Footer-->
-<footer class="footer">
-    <p><a href="http://terrabrasilis.dpi.inpe.br"> TerraBrasilis</a>&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
-</footer>
-<!--/.Footer-->
+</script-->
