Versao sisgeo no navbar

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,7 +2,7 @@
 <div id="content">
     <nav class="navbar navbar-expand-lg materialnav navbar-header"> 
         <i class="material-icons menuicon" id="sidebarCollapse" >menu</i>
-        <a class="navbar-brand" href="../../SisGeov1/index.html"><span class="azul" >Sis</span><span class="marron">Geo</span></a>
+        <a class="navbar-brand" href="../../SisGeov1/index.html"><span class="azul" >Sis</span><span class="marron">Geo</span> v1.0</a>
         <!--Prodes desmatamento-->
         <!--div class="navbar-nav collapse navbar-collapse justify-content-between"> 
             <a class="nav-item nav-link">| {{ 'app.' + type | translate }}</a> 
