--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -36,7 +36,7 @@ a:focus {
 }
 
 .azul{
-  color: rgba(0, 0, 255, 0.8);
+  color: rgba(0, 206, 255, 0.8);
 }
 
 .marron{
@@ -87,7 +87,7 @@ a:focus {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
   align-items: center;
-  background-color:  #2590c3;
+  background-color:  #1b3548;
   color: #fff !important;
   font-weight: 400;
   font-size: 16px;
