--- a/src/assets/css/jquery-ui/jquery.loading.css
+++ b/src/assets/css/jquery-ui/jquery.loading.css
@@ -18,7 +18,7 @@
     /* 
     * Add terrabrasilis.gif
     */
-    background: url(../../img/terrabrasilis.gif) no-repeat;
+    background: url(../../img/sisgeo.png) no-repeat;
     background-position-x: 50%;
     background-position-y: 45%;
 }
