--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+:root {
+    --primary-color: #2590c3;
+}
+
 body {
     margin: 0;
     font-family: Roboto, sans-serif;
@@ -38,7 +42,7 @@ mat-toolbar-row {
 }
 
 .mat-slider {
-    color: #108d6f !important;
+    color: var(--primary-color) !important;
 }
 
 .mat-dialog-container {
