--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,3 +1,9 @@
+:root {
+  --sidebar-primary-color: #2590c3;
+  --sidebar-second-color: #00d0ff;
+  --navbar-color: #0c2461;
+}
+
 .container-icon {
   padding: 0 14px;
 }
@@ -61,7 +67,7 @@
   cursor: pointer;
 }
 .badge-light {
-  color: #1e757e;
+  color: var(--sidebar-primary-color);
   background-color: #ffffff;
   position: relative;
   left: 1px;
@@ -101,7 +107,7 @@
 * Sidebar customization
 */
 .project-group-opened {padding: 0px !important;}
-.group-title-opened { padding:8px !important; background-color: #00d0ff;
+.group-title-opened { padding:8px !important; background-color: var(--sidebar-second-color);
 }
 .grp-prj {right: 12px !important;}
 
@@ -110,11 +116,11 @@
 }
 
 .material-switch>input[type="checkbox"]:checked+label::before {
-    background: #49bc95 !important;
+    background: var(--navbar-color) !important;
     opacity: 0.9 !important;
 }
 .group-title-closed {
-    background-color: #2590c3 !important;
+    background-color: var(--sidebar-primary-color) !important;
 }
 .project-group-closed {
    padding: 0px !important;
