--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -165,7 +165,7 @@ a:focus {
 
 .fe-camadas {
   padding: 10px 0px 10px 0px;
-  width: fit-content;
+  /*width: fit-content;*/
   display: -webkit-box;
 }
 
