--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -248,7 +248,6 @@ dfn::after {
   top: 22px;
   left: 0;
   opacity: 0;
-  /* width: 230px; */
   widows: auto;
   font-size: 13px;
   line-height: 1.5em;
@@ -329,7 +328,6 @@ dfn:hover::before {
 
 #sidebar .sidebar-header {
   padding: 4px 20px 4px 20px;
-  /*background-image: url(../../img/map/sisgeo.png);*/
   background: linear-gradient(-45deg,#52eee6, #2590c3, #23a6d5, #52eee6);
 	background-size: 400% 400%;
 	animation: gradientBG 15s ease infinite;
@@ -353,6 +351,7 @@ dfn:hover::before {
   height: 55%;
   width: 100%;
   margin-top: 40px;
+  object-fit: contain;
 }
 
 .descricao {
@@ -394,6 +393,22 @@ dfn:hover::before {
   color: #fff !important;
 }
 
+.leaflet-control-coordinates .label button i{
+  color: var(--sidebar-second-color);
+}
+
+.leaflet-control-coordinates .label button:hover i{
+  color: white;
+} 
+
+.leaflet-control-coordinates .label button{
+  border-color: var(--sidebar-second-color);
+} 
+
+.leaflet-control-coordinates .label button:hover{
+  background-color: var(--sidebar-second-color);
+} 
+
 #sidebar ul li a i {
   margin-right: 12px;
   vertical-align: -7px;
@@ -401,7 +416,7 @@ dfn:hover::before {
 }
 
 #sidebar ul li a:hover {
-  color: #00796b;
+  color: var(--sidebar-primary-color);
 
 }
 
@@ -761,7 +776,7 @@ a.article:hover {
 
 
 .material-switch>input[type="checkbox"]:checked+label::before {
-  background: #328268 !important;
+  background: var(--sidebar-primary-color) !important;
   opacity: 0.6 !important;
 }
 
