Arrumando correcoes do pull request

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,9 @@
                     <div class="modal-header fechar">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
                     </div> 					
-                    <!-- / modal-header >
                     <div class="modal-body ">						
                         <div id="carouselExampleIndicators" class="carousel slide sobre" data-ride="carousel">
-                            <!-- <ol class="carousel-indicators">
+                             <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleIndicators" id="" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
@@ -34,32 +33,28 @@
                             </a>
                         </div>				
                     </div>                    
-                    <!-- / modal-body >
                     <div class="modal-footer">
                         <div class="checkbox pull-right">
                             <label>
                                 <input id="notice" class="modal-check" name="modal-check" type="checkbox"><span class="textoc">{{ 'tools.notice' | translate }}.</span>
                             </label>
                         </div>
-                        <!--/ checkbox >
                     </div>
-                    <!--/ modal-footer >
                 </div>
-                <!-- / modal-content >
             </div>
-            <!--/ modal-dialog >
         </div>
-        <!-- / modal >
     </div>
-    <!-- / row >
-</div>
-<!-- / container -->
+</div-->
 
-<!-- Carousel Slider > 
-<script>
+<footer class="footer">
+    <p>Sisgeo&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
+    <div class="version_style">ver: {{version}}</div>
+</footer>
+
+<!--script>
     $(document).ready(function() {
         $('#carouselExampleIndicators').modal('show');
-        $('.carousel'). http://172.18.0.1:13222/api/v1/visioncarousel({
+        $('.carousel').carousel({
             interval: 2000
         })
     });
