--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,8 @@ mat-toolbar-row {
 #map {
     position: fixed;
     top: 64px;
-    height: calc(100% - 65px);
+    /* height: calc(100% - 65px); */
+    height: calc(100% - 109px);
     width: calc(100% - 290px);
     /* outline: none;  */
     margin: 0;  
