--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,11 +46,6 @@
     </div>
 </div-->
 
-<footer class="footer">
-    <p>Sisgeo&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
-    <div class="version_style">ver: {{version}}</div>
-</footer>
-
 <!--script>
     $(document).ready(function() {
         $('#carouselExampleIndicators').modal('show');
@@ -59,3 +54,8 @@
         })
     });
 </script-->
+
+<footer class="footer">
+    <p><a href="#">Sisgeo</a>&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
+    <div class="version_style">ver: {{version}}</div>
+</footer>
