--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,9 +75,10 @@ mat-toolbar-row {
 @import '~assets/css/dc/dc.css';
 @import '~assets/css/gridstack/gridstack.css';
 @import '~assets/css/gridstack/gridstack-extra.css';
-@import '~assets/css/map/baselayer.css';
-@import '~assets/css/map/estilo.css';
+// @import '~assets/css/map/baselayer.css';
+// @import '~assets/css/map/estilo.css';
 @import '~assets/css/map/jquery.mCustomScrollbar.min.css';
+@import '~assets/css/map/mCS-sisgeo-theme.css';
 @import '~assets/css/jquery-ui/jquery.loading.css';
 @import '~assets/css/jquery-scrolling/jquery.scrolling-tabs.min.css';
 
