- remove componente de contato, "contact-service", entidade "contact" e remove dependência "angular/forms", referenciada no componente de contato. Esse componente não será mais utilizado, pois o link de contato vai direcionar para o site do sisgeo, na div de contato. - define a url do site do sisgeo nos três links do navbar: sobre, contato e ajuda. Posteriormente os links corretos de cada um serão inseridos - o texto "Sisgeo" agora é todo branco - remove item "navbar-toogler" do navbar que não está nem estava sendo utilizado

--- a/src/assets/css/map/estilo.css
+++ b/src/assets/css/map/estilo.css
@@ -33,9 +33,9 @@ a:focus {
   transition: all 0.3s;
 }
 
-.azul{
+/* .azul{
   color: var(--sidebar-second-color);
-}
+} */
 
 
 /* ---------------------------------------------------
@@ -727,60 +727,8 @@ a.article:hover {
   width: 100%;
 }
 
-.navbar-toggler {
-  border: none;
-  background: transparent !important;
-}
-
-.navbar-toggler:focus {
-  outline: none;
-  background: transparent !important;
-}
-
-.navbar-toggler .icon-bar {
-  background-color: #fff;
-  transform: rotate(0deg) translate(0px, 0px);
-  transition: ease all .2s;
-}
-
-.navbar-toggler .icon-bar {
-  display: block;
-  width: 22px;
-  height: 2px;
-  border-radius: 1px;
-}
-
-.navbar-toggler .icon-bar+.icon-bar {
-  margin-top: 4px;
-}
-
 .icon-bar:nth-child(2) {
   width: 16px;
-  transition: ease all .2s;
-}
-
-.navbar-toggler:hover>.icon-bar:nth-child(2) {
-  width: 22px;
-  transition: ease all .2s;
-}
-
-.navbar-toggler:active>.icon-bar:nth-child(2) {
-  width: 22px;
-  transition: ease all .2s;
-}
-
-.navbar-toggler:not(.collapsed) .icon-bar:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 4px);
-  transition: ease all .2s;
-}
-
-.navbar-toggler:not(.collapsed) .icon-bar:nth-child(2) {
-  opacity: 0;
-  transition: ease all .2s;
-}
-
-.navbar-toggler:not(.collapsed) .icon-bar:nth-child(3) {
-  transform: rotate(-45deg) translate(4px, -4px);
   transition: ease all .2s;
 }
 
@@ -1204,10 +1152,6 @@ footer {
     transition: all 0.5s ease !important;
     background-color: #108d6f !important;
     border-color: #108d6f !important;
-  }
-
-  #menuanaliseid.active {
-    margin-right: -155px !important;
   }
 
   .navbar-brand.active {
