--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,18 +2,34 @@
 <div id="content">
     <nav class="navbar navbar-expand-lg materialnav navbar-header"> 
         <i class="material-icons menuicon" id="sidebarCollapse" >menu</i>
-        <span class="azul">Sis</span><span>Geo</span><span style="font-size: 19px;"> v1.0</span>
-        <button class="navbar-toggler" id="menuanaliseid" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
-            <i class="material-icons menuicon">more_vert</i> 
-        </button>
+        <span style="font-size: 19px;">SisGeo 1.0</span>
         <div class="collapse navbar-collapse flex-column" id="navbarSupportedContent">
             <ul class="navbar-nav navbar-right analises">
-            <li class="nav-item"> <a class="nav-link" target="_blank" style="cursor: pointer;" href="{{ terraBrasilisAboutURL }}"> <i class="material-icons iconmobile">info</i>{{ 'menu.about' | translate }} </a> </li>
-            <li class="nav-item"> <a class="nav-link" style="cursor: pointer;" (click)="showContact()"> <i class="material-icons iconmobile">email</i>{{ 'menu.contact' | translate }}</a> </li>
-            <li class="nav-item"> <a class="nav-link" target="_blank" style="cursor: pointer;" href="{{ imgPath }}assets/files/manual-terrabrasilis-v1.pdf"> <i class="material-icons iconmobile">help</i>{{ 'menu.help' | translate }}</a> </li>
-            <li class="dropdown-divider"></li>
-            <li class="nav-item"> <a class="nav-link" style="cursor: pointer;" (click)="changeLanguage('pt-br')"><img src="{{ imgPath }}assets/img/map/br.svg" class="bandeira" alt="portugues"></a> </li>
-            <li class="nav-item"> <a class="nav-link" style="cursor: pointer;" (click)="changeLanguage('en')"><img src="{{ imgPath }}assets/img/map/usa.svg" class="bandeira" alt="ingles"></a> </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" style="cursor: pointer;" href="{{ sisgeoAboutUrl }}">
+                        {{ 'menu.about' | translate }}
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="cursor: pointer;" href="{{ sisgeoContactUrl }}">
+                        {{ 'menu.contact' | translate }}
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" style="cursor: pointer;" href="{{ sisgeoHelpUrl }}">
+                        {{ 'menu.help' | translate }}
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="cursor: pointer;" (click)="changeLanguage('pt-br')">
+                        <img src="{{ imgPath }}assets/img/map/br.svg" class="bandeira" alt="portugues">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="cursor: pointer;" (click)="changeLanguage('en')">
+                        <img src="{{ imgPath }}assets/img/map/usa.svg" class="bandeira" alt="ingles">
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
